--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.101",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/styled-components": "^5.1.34",
     "aos": "^3.0.0-beta.6",
     "emailjs-com": "^3.2.0",
     "react": "^18.3.1",
