--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/styled-components": "^5.1.34",
+    "antd": "^5.19.0",
     "aos": "^3.0.0-beta.6",
     "emailjs-com": "^3.2.0",
     "react": "^18.3.1",
@@ -19,6 +20,7 @@
     "react-input-mask": "^2.0.4",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.11",
+    "swiper": "^11.1.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -48,6 +50,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/antd": "^1.0.0",
     "@types/aos": "^3.0.7",
     "@types/react-input-mask": "^3.0.5"
   }
