--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^18.3.1",
     "react-input-mask": "^2.0.4",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11",
     "swiper": "^11.1.4",
     "typescript": "^4.9.5",
@@ -52,6 +54,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/antd": "^1.0.0",
     "@types/aos": "^3.0.7",
-    "@types/react-input-mask": "^3.0.5"
+    "@types/react-input-mask": "^3.0.5",
+    "@types/react-slick": "^0.23.13"
   }
 }
